<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_alarm" />

        <Button
            android:id="@+id/startAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_corners"
            android:fadingEdge="horizontal|vertical"
            android:onClick="startAlarm"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/starta_alarm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pauseAlarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners"
                android:onClick="periods"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/pausa_alarm_i_7_dagar" />

            <Button
                android:id="@+id/calendar_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="chooseDay"
                android:background="@drawable/rounded_corners"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/choose_day" />
        </LinearLayout>


        <Button
            android:id="@+id/turnOffAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:onClick="turnOffAlarm"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/stoppa_alarm" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:timePickerMode="spinner" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="213dp"
            android:layout_height="159dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/doggo"
            app:srcCompat="@drawable/umbrella" />
    </FrameLayout>

</LinearLayout>